// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить текст в <span class="AmpButton__text"/>, а компонент в <span class="AmpButton__content"/> 1`] = `
<button
  className="AmpButton AmpButton_color_unset AmpButton_size_l AmpButton_type_button AmpButton_width_default"
  type="button"
>
  <span
    className="AmpButton__content"
  >
    <span
      className="AmpButton__text"
      key="wrappedText"
    >
      foo
    </span>
    <div
      key="wrappedChild1"
    >
      tag
    </div>
  </span>
</button>
`;

exports[`должен отрендерить текст кнопки в <span class="AmpButton__text"/> 1`] = `
<button
  className="AmpButton AmpButton_color_unset AmpButton_size_l AmpButton_type_button AmpButton_width_default"
  type="button"
>
  <span
    className="AmpButton__content"
  >
    <span
      className="AmpButton__text"
      key="wrappedText"
    >
      foo
    </span>
  </span>
</button>
`;

exports[`компонент внутри кнопки должен отрендерить внутри <span class="AmpButton__content"/> без <span class="AmpButton__text"/> должен правильно отрендерить stateless компонент 1`] = `
<button
  className="AmpButton AmpButton_color_unset AmpButton_size_l AmpButton_type_button AmpButton_width_default"
  type="button"
>
  <span
    className="AmpButton__content"
  >
    <Foo
      key="wrappedChild0"
    />
  </span>
</button>
`;

exports[`компонент внутри кнопки должен отрендерить внутри <span class="AmpButton__content"/> без <span class="AmpButton__text"/> должен правильно отрендерить компонент 1`] = `
<button
  className="AmpButton AmpButton_color_unset AmpButton_size_l AmpButton_type_button AmpButton_width_default"
  type="button"
>
  <span
    className="AmpButton__content"
  >
    <Foo
      key="wrappedChild0"
    />
  </span>
</button>
`;

exports[`компонент внутри кнопки должен отрендерить внутри <span class="AmpButton__content"/> без <span class="AmpButton__text"/> должен правильно отрендерить тег 1`] = `
<button
  className="AmpButton AmpButton_color_unset AmpButton_size_l AmpButton_type_button AmpButton_width_default"
  type="button"
>
  <span
    className="AmpButton__content"
  >
    <div
      key="wrappedChild0"
    >
      tag
    </div>
  </span>
</button>
`;
